# ChangeLog for x11-wm/muffin
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/muffin/ChangeLog,v 1.6 2012/05/21 19:12:07 tetromino Exp $

  21 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  muffin-1.0.2-r1.ebuild:
  Need eutils for epatch.

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> muffin-1.0.1.ebuild,
  muffin-1.0.2.ebuild, muffin-1.0.2-r1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*muffin-1.0.2-r1 (13 Apr 2012)

  13 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  +muffin-1.0.2-r1.ebuild,
  +files/muffin-1.0.2-frame-initialize-style-contexts.patch:
  Fix graphical corruption in window decorations with gtk+-3.4 (bug #411723
  comment #3, thanks to Philipp Riegger).

*muffin-1.0.2 (15 Mar 2012)

  15 Mar 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  -muffin-1.0.0.ebuild, +muffin-1.0.2.ebuild:
  Version bump with various bugfixes. Drop old.

*muffin-1.0.1 (21 Feb 2012)

  21 Feb 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  +muffin-1.0.1.ebuild:
  Version bump.

*muffin-1.0.0 (25 Jan 2012)

  25 Jan 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  +muffin-1.0.0.ebuild, +files/muffin-1.0.0-ignore-shadow-and-padding.patch,
  +metadata.xml:
  New package: Linux Mint's fork of x11-wm/mutter for use with Cinnamon.
