@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/muffin/Attic/muffin-1.0.1.ebuild,v 1.2 2012/05/04 08:58:56 jdhore Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/muffin/Attic/muffin-1.0.1.ebuild,v 1.3 2012/05/22 06:41:16 tetromino Exp $
 
 EAPI="4"
 GCONF_DEBUG="no"
@@ -20,11 +20,11 @@ KEYWORDS="~amd64 ~x86"
 
 COMMON_DEPEND=">=x11-libs/pango-1.2[X,introspection?]
 	>=x11-libs/cairo-1.10[X]
-	x11-libs/gdk-pixbuf:2
+	x11-libs/gdk-pixbuf:2[introspection?]
 	>=x11-libs/gtk+-2.91.7:3[introspection?]
 	>=gnome-base/gconf-2:2
 	>=dev-libs/glib-2.14:2
-	>=media-libs/clutter-1.7.5:1.0
+	>=media-libs/clutter-1.7.5:1.0[introspection?]
 	>=media-libs/libcanberra-0.26[gtk3]
 	>=x11-libs/startup-notification-0.7
 	>=x11-libs/libXcomposite-0.2
