@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/mutter/mutter-3.4.1-r1.ebuild,v 1.2 2012/05/21 19:13:18 tetromino Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/mutter/mutter-3.4.1-r1.ebuild,v 1.3 2012/05/22 06:38:59 tetromino Exp $
 
 EAPI="4"
 GNOME2_LA_PUNT="yes"
@@ -17,15 +17,15 @@ KEYWORDS="~amd64 ~x86"
 
 COMMON_DEPEND=">=x11-libs/pango-1.2[X,introspection?]
 	>=x11-libs/cairo-1.10[X]
-	x11-libs/gdk-pixbuf:2
+	x11-libs/gdk-pixbuf:2[introspection?]
 	>=x11-libs/gtk+-3.3.7:3[introspection?]
 	>=dev-libs/glib-2.25.11:2
-	>=media-libs/clutter-1.9.10:1.0
-	>=media-libs/cogl-1.9.6:1.0
+	>=media-libs/clutter-1.9.10:1.0[introspection?]
+	>=media-libs/cogl-1.9.6:1.0[introspection?]
 	>=media-libs/libcanberra-0.26[gtk3]
 	>=x11-libs/startup-notification-0.7
 	>=x11-libs/libXcomposite-0.2
-	>=gnome-base/gsettings-desktop-schemas-3.3.0
+	>=gnome-base/gsettings-desktop-schemas-3.3.0[introspection?]
 
 	x11-libs/libICE
 	x11-libs/libSM
