@@ -1,6 +1,10 @@
 # ChangeLog for x11-wm/mutter
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/mutter/ChangeLog,v 1.10 2012/05/21 19:13:18 tetromino Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/mutter/ChangeLog,v 1.11 2012/05/22 06:38:59 tetromino Exp $
+
+  22 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org> mutter-3.2.2.ebuild,
+  mutter-3.2.2-r1.ebuild, mutter-3.4.1-r1.ebuild:
+  Add some missing introspection USE depends (thanks to Sholy).
 
   21 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org> mutter-3.2.2.ebuild,
   mutter-3.2.2-r1.ebuild, mutter-3.4.1-r1.ebuild:
