@@ -1,6 +1,10 @@
 # ChangeLog for x11-wm/muffin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/muffin/ChangeLog,v 1.6 2012/05/21 19:12:07 tetromino Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-wm/cvs-repo/gentoo-x86/x11-wm/muffin/ChangeLog,v 1.7 2012/05/22 06:41:16 tetromino Exp $
+
+  22 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org> muffin-1.0.1.ebuild,
+  muffin-1.0.2.ebuild, muffin-1.0.2-r1.ebuild:
+  Add some missing introspection USE depends (thanks to Sholy).
 
   21 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
   muffin-1.0.2-r1.ebuild:
